--- a/tracker.css
+++ b/tracker.css
@@ -1,3 +1,7 @@
+:root {
+    --theme: #788cde;
+}
+
 body {
     background-color: #1d1d1d;
     color: white;
@@ -16,11 +20,11 @@ body {
     align-items: center;
 
     background-color: #363636;
-    border: 2px solid #788cde;
+    /*border: 2px solid #788cde;*/
     border-radius: 5px;
 
     margin: 5px;
-    padding: 5px;
+    padding: 10px;
     
 }
 
@@ -32,3 +36,47 @@ p {
     padding: 0px;
     margin: 0px;
 }
+
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  appearance: none;
+
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid currentColor;
+  border-radius: 50%;
+  transform: translateY(-0.075em);
+
+  display: grid;
+  place-content: center;
+}
+
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.55em;
+  height: 0.55em;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  transform: scale(0);
+  transform-origin: bottom left;
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em #ffffff;
+
+}
+
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+}
+
+/*input[type="checkbox"]:focus {
+  outline: max(2px, 0.15em) solid currentColor;
+  outline-offset: max(2px, 0.15em);
+}*/
+
+/*input[type="checkbox"]:disabled {
+  --form-control-color: var(--form-control-disabled);
+
+  color: var(--form-control-disabled);
+  cursor: not-allowed;
+}*/
